--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ header.css-1avcm0n.e8zbici2
 
 a.css-17nby6i.e1fqkh3o6 {
     background-color: #fb5a5a;
+    height: 1.5cm;
+    border-radius: 8px;
 }
 
 div.css-6qob1r.e1fqkh3o3 {
@@ -33,8 +35,19 @@ div.css-fis6aj.exg6vvm10 {
 }
 
 /*
+button.css-9s5bis.edgvbvh3 {
+    background-color: #6a86da;
+}
+
+
+div.css-8u98yl.exg6vvm0 {
+    width: 12cm;
+}
+
+
 footer.css-1q1n0ol.egzxvld0 { 
     opacity: 0%;
 }
 */
+
 
