--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-
-
-section.main.css-k1vhr4.egzxvld3 {
-    background-color: #6a86da;
-}
-
 header.css-18ni7ap.e8zbici2 {
     background-color: #fb5a5a;
 }
@@ -19,10 +13,6 @@ a.css-17nby6i.e1fqkh3o6 {
     border-radius: 8px;
 }
 
-div.css-6qob1r.e1fqkh3o3 {
-    background-color:#6a86da;
-}
-
 div.css-gggys9.e1fqkh3o0 {
     background-color: #fb5a5a;
 }
@@ -36,6 +26,11 @@ span.css-10trblm.e16nr0p30 {
     font-weight: bold;
     font-variant-caps: small-caps;
     border-bottom: 3px solid #fb5a5a;
+}
+
+div.css-1r6slb0.e1tzin5v2 {
+   /* border-radius: 20px;    
+    background-color: lightblue;*/
 }
 
 /*
